--- a/MagazineManagment.ClientApplication/Views/ProductApiCall/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductApiCall/Index.cshtml
@@ -5,8 +5,25 @@
     .table{
         border: 2px solid #fff;
     }
+    .btn-green{
+        background-color: green;
+        color: #fff;
+    }
+    .btn-green:hover{
+        color:green;
+        background-color:#fff;
+        border-color:green;
+    }
+    .btn-danger:hover{
+         color:#dc3545;
+        background-color:#fff;
+    }
 
 </style>
+
+
+<h2>@ViewBag.Message</h2>
+
 
 <table class="table table-striped table-dark">
     <thead class="thead-dark">
@@ -19,7 +36,7 @@
             <th scope="col">Created on</th>
             <th scope="col">Created by</th>
             <th scope="col">In stock</th>
-            <th scope="col">Image</th>
+            @*<th scope="col">Image</th>*@
             <th scope="col">Actions</th>
         </tr>
     </thead>
@@ -34,9 +51,9 @@
             <td>@item.CreatedOn?.ToString("MMMM dd, yyyy")</td>
             <td>@item.CreatedBy</td>
             <td>@item.ProductInStock</td>
-            <td><img src="data:image/png;base64,@item.Image" width="100px" /></td>
+            @*<td><img src="data:image/png;base64,@item.Image" width="100px" /></td>*@
             <td>
-                    <a asp-action="Edit" asp-controller="ProductApiCall" asp-route-id="@item.Id" class="btn btn-dark">Edit</a> |
+                    <a asp-action="Edit" asp-controller="ProductApiCall" asp-route-id="@item.Id" class="btn btn-green">Edit</a> |
                     <a asp-action="Delete" asp-controller="ProductApiCall" asp-route-id="@item.Id" class=" btn btn-danger">Delete</a>
             </td>
         </tr>
