--- a/MagazineManagment.ClientApplication/Views/ProductApiCall/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductApiCall/Index.cshtml
@@ -36,8 +36,9 @@
             <th scope="col">Created on</th>
             <th scope="col">Created by</th>
             <th scope="col">In stock</th>
-            @*<th scope="col">Image</th>*@
+            <th scope="col">Image</th>
             <th scope="col">Actions</th>
+           @* <th>Category</th>*@
         </tr>
     </thead>
     <tbody>
@@ -51,7 +52,8 @@
             <td>@item.CreatedOn?.ToString("MMMM dd, yyyy")</td>
             <td>@item.CreatedBy</td>
             <td>@item.ProductInStock</td>
-            @*<td><img src="data:image/png;base64,@item.Image" width="100px" /></td>*@
+            @*<td>@item</td>*@
+            <td><img src="data:image/png;base64,@item.Image" width="100px" /></td>
             <td>
                     <a asp-action="Edit" asp-controller="ProductApiCall" asp-route-id="@item.Id" class="btn btn-green">Edit</a> |
                     <a asp-action="Delete" asp-controller="ProductApiCall" asp-route-id="@item.Id" class=" btn btn-danger">Delete</a>
