Category section create / edit

--- a/MagazineManagment.ClientApplication/Views/Home/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/Home/Index.cshtml
@@ -8,3 +8,6 @@
 </div>
 
 <a asp-action="Index" asp-controller="ProductApiCall">Click Me</a>
+
+
+<a asp-action="Index" asp-controller="CategoryApiCall">Print Categories</a>
