Added Roles with cruds

--- a/MagazineManagment.ClientApplication/Views/ProductApiCall/Edit.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductApiCall/Edit.cshtml
@@ -59,6 +59,7 @@
         <span asp-validation-for="CreatedBy" class="text-danger"></span>
     </div>
     <br />
+   @* <input type="hidden"  asp-for="CategoryId"/>*@
     <input type="submit" value="Update Product" class="btn btn-primary" />
 
 </form>
