--- a/MagazineManagment.ClientApplication/Views/CategoryApiCall/Edit.cshtml
+++ b/MagazineManagment.ClientApplication/Views/CategoryApiCall/Edit.cshtml
@@ -1,2 +1,26 @@
-﻿<h1>Edit</h1>
+﻿@using MagazineManagment.DTO.ViewModels
+@model CategoryUpdateViewModel
 
+<style>
+  
+    .btn-green{
+        background-color: green;
+        color: #fff;
+    }
+    .btn-green:hover{
+        color:green;
+        background-color:#fff;
+        border-color:green;
+    }
+</style>
+
+<form asp-action="Edit" asp-controller="CategoryApiCall" method="post" asp-antiforgery="true">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="CategoryName" ></label>
+        <input asp-for="CategoryName" type="text" placeholder="Category Name" class="form-control"/>
+        <span asp-validation-for="CategoryName"  class="text-danger"></span>
+    </div>
+    <br />
+    <input type="submit" value="Update category" class="btn btn-green" />
+</form>
