Roles Cruds and role asigment to  users

--- a/MagazineManagment.ClientApplication/Views/Home/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/Home/Index.cshtml
@@ -7,7 +7,12 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<a asp-action="Index" asp-controller="ProductApiCall">Click Me</a>
+<a asp-action="Index" asp-controller="ProductClient">Products</a>
 
+<br />
 
-<a asp-action="Index" asp-controller="CategoryApiCall">Print Categories</a>
+<a asp-action="Index" asp-controller="CategoryClient">Categories</a>
+
+<br />
+
+<a asp-action="Index" asp-controller="ProfileClient">Roles</a>
