--- a/MagazineManagment.ClientApplication/Views/CategoryClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/CategoryClient/Delete.cshtml
@@ -1,23 +1,11 @@
 ﻿@using MagazineManagment.DTO.ViewModels
 @model CategoryUpdateViewModel
+
 @{
     ViewData["Title"] = "Delete";
 }
 
-<style>
-  
-    .btn-danger{
-        background-color: #dc3545;
-        color: #fff;
-    }
-    .btn-danger:hover{
-        color:#dc3545;
-        background-color:#fff;
-        border-color:#dc3545;
-    }
-</style>
-
-<form asp-action="Delete" asp-controller="CategoryApiCall" method="post" asp-antiforgery="true">
+<form asp-action="Delete" asp-controller="CategoryClient" method="post" asp-antiforgery="true">
      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
