--- a/MagazineManagment.ClientApplication/Views/ProductClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/Delete.cshtml
@@ -5,40 +5,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<style>
-    .form-group-image{
-        display: flex;
-        align-items: center;
-        justify-content:center;
-    }
-    .form-group-image h1{
-        margin:0px 30px;
-    }
-    .btn-danger{
-        background-color: #dc3545;
-        color: #fff;
-    }
-    .btn-danger:hover{
-        color:#dc3545;
-        background-color:#fff;
-        border-color:#dc3545;
-    }
-    .btn-green{
-        background-color: green;
-        color: #fff;
-    }
-    .btn-green:hover{
-        color:green;
-        background-color:#fff;
-        border-color:green;
-    }
-</style>
-
 <h3>Are you sure to delete this record?</h3>
 
-<form asp-action="Delete" asp-controller="ProductApiCall" method="post" method="post" asp-antiforgery="true">
+<form asp-action="Delete" asp-controller="ProductClient" method="post" method="post" asp-antiforgery="true">
     <input type="submit" value="Yes" class="btn btn-danger" />
-    <a asp-action="Index" asp-controller="ProductApiCall" class="btn btn-green">No</a>
+    <a asp-action="Index" asp-controller="ProductClient" class="btn btn-green">No</a>
     <br />
     <div asp-validation-summary="ModelOnly" class="text-green"></div>
     <div class="form-group">
