--- a/MagazineManagment.ClientApplication/Views/ProductClient/Edit.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/Edit.cshtml
@@ -5,18 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<style>
-    .form-group-image{
-        display: flex;
-        align-items: center;
-        justify-content:center;
-    }
-    .form-group-image h1{
-        margin:0px 30px;
-    }
-</style>
-
-<form asp-action="Edit" asp-controller="ProductApiCall" method="post" enctype="multipart/form-data" method="post" asp-antiforgery="true">
+<form asp-action="Edit" asp-controller="ProductClient" method="post" enctype="multipart/form-data" method="post" asp-antiforgery="true">
     
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
