--- a/MagazineManagment.ClientApplication/Views/ProductClient/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/Index.cshtml
@@ -1,30 +1,6 @@
 ﻿@using MagazineManagment.DTO.ViewModels
 @model  IEnumerable<ProductViewModel>
 
-<style>
-    .table{
-        border: 2px solid #fff;
-    }
-    .btn-green{
-        background-color: green;
-        color: #fff;
-    }
-    .btn-green:hover{
-        color:green;
-        background-color:#fff;
-        border-color:green;
-    }
-    .btn-danger:hover{
-         color:#dc3545;
-        background-color:#fff;
-    }
-
-</style>
-
-
-<h2>@ViewBag.Message</h2>
-
-
 <table class="table table-striped table-dark">
     <thead class="thead-dark">
         <tr>
@@ -56,12 +32,12 @@
 
             <td><img src="data:image/png;base64,@item.Image" width="100px" /></td>
             <td>
-                    <a asp-action="Edit" asp-controller="ProductApiCall" asp-route-id="@item.Id" class="btn btn-green">Edit</a> |
-                    <a asp-action="Delete" asp-controller="ProductApiCall" asp-route-id="@item.Id" class=" btn btn-danger">Delete</a>
+                    <a asp-action="Edit" asp-controller="ProductClient" asp-route-id="@item.Id" class="btn btn-green">Edit</a> |
+                    <a asp-action="Delete" asp-controller="ProductClient" asp-route-id="@item.Id" class=" btn btn-danger">Delete</a>
             </td>
         </tr>
         }
     </tbody>
 </table>
 
-<a asp-controller="ProductApiCall" asp-action="Create" class="btn btn-primary">Create new product</a>
+<a asp-controller="ProductClient" asp-action="Create" class="btn btn-primary">Create new product</a>
