Added admin functionality , admin can assign roles to users

--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Create.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Create.cshtml
@@ -8,7 +8,7 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="RoleName" ></label>
-        <input asp-for="RoleName" type="text" placeholder="Category Name" class="form-control"/>
+        <input asp-for="RoleName" type="text" placeholder="Role name" class="form-control"/>
         <span asp-validation-for="RoleName"  class="text-danger"></span>
     </div>
     <br />
