Added admin functionality for  admin to remove roles

--- a/MagazineManagment.ClientApplication/Views/Home/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/Home/Index.cshtml
@@ -16,3 +16,7 @@
 <br />
 
 <a asp-action="Index" asp-controller="ProfileClient">Roles</a>
+
+<br />
+
+<a asp-action="Claims" asp-controller="ProfileClient">claims</a>
