--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Update.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Update.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MagazineManagment.DTO.ViewModels
-@model RoleFindViewModel
+@model ProfileUpdateViewModel
 @{
     ViewData["Title"] = "Update";
 }
@@ -24,4 +24,3 @@
         <a asp-action="AsingRoleToUsers" asp-controller="ProfileClient" asp-route-id="@Model.RoleId" class="btn btn-green">Add</a>
     </div>
 </div>
-
