--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Index.cshtml
@@ -6,6 +6,7 @@
 
 <h2>@ViewBag.Message</h2>
 
+<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
 <table class="table table-striped table-dark">
     <thead class="thead-dark">
