--- a/MagazineManagment.ClientApplication/Views/ProfileClient/RemoveRoleFromUsers.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/RemoveRoleFromUsers.cshtml
@@ -1,21 +1,23 @@
 ﻿@using MagazineManagment.DTO.ViewModels
 @model List<UserInRoleViewModel>
+
 @{
-    ViewData["Title"] = "GetAllUsers";
+    ViewData["Title"] = "RemoveRoleFromUsers";
     var roleId = ViewBag.roleId;
 }
 
-<form method="post" asp-action="AsingRoleToUsers" asp-controller="ProfileClient" asp-antiforgery="true">
+<form method="post" asp-action="RemoveRoleFromUsers" asp-controller="ProfileClient" asp-antiforgery="true">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="card">
         <div class="card-header">
-            <h2>Users that are not in this role</h2>
+            <h2>Users that are in this role</h2>
+            <h6>Click the checkboxes is you wish to remove a user from this role</h6>
         </div>
         <div class="card-body">
         @if (Model.Count()  == 0)
         {
-            <h4 style="color:red">There's no accounts to assign to this role</h4>
-            <a asp-action="Update"  asp-controller="ProfileClient" asp-route-id="@roleId" class="btn btn-green" style="width:auto">Go back</a>
+            <h4 style="color:red">There's no accounts to remove from this role</h4>
+            <a asp-action="Delete" asp-controller="ProfileClient" asp-route-id="@roleId" class="btn btn-green" style="width:auto">Go back</a>
         }
         else
         {
@@ -31,8 +33,8 @@
                 </div>
             }
                  <div class="card-footer">
-                    <input type="submit" value="Add" class="btn btn-green" style="width:auto" />
-                    <a asp-action="Update"  asp-controller="ProfileClient" asp-route-id="@roleId" class="btn btn-danger" style="width:auto">Cancel</a>
+                    <input type="submit" value="Remove" class="btn btn-danger" style="width:auto" />
+                    <a asp-action="Delete"  asp-controller="ProfileClient" asp-route-id="@roleId" class="btn btn-green" style="width:auto">Cancel</a>
                 </div>
         }
         </div>
