Admin user can see the changes made by manager user Added table styles

--- a/MagazineManagment.ClientApplication/Views/Home/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/Home/Index.cshtml
@@ -3,8 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4" style="color:white">Welcome</h1>
 </div>
 
 <a asp-action="Index" asp-controller="ProductClient">Products</a>
@@ -20,3 +19,7 @@
 <br />
 
 <a asp-action="Claims" asp-controller="ProfileClient">claims</a>
+
+<br />
+
+<a asp-action="GetChangesMadeByEmployees" asp-controller="ProductClient">channges to products by employees</a>
