--- a/MagazineManagment.ClientApplication/Views/ProductClient/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/Index.cshtml
@@ -1,42 +1,50 @@
 ﻿@using MagazineManagment.DTO.ViewModels
-@model  IEnumerable<ProductViewModel>
+@model IEnumerable<ProductViewModel>
 
-<table class="table table-striped table-dark">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Serial number</th>
-            <th scope="col">Product name</th>
-            <th scope="col">Price</th>
-            <th scope="col">Currency type</th>
-            <th scope="col">Descriptionn</th>
-            <th scope="col">Created on</th>
-            <th scope="col">Created by</th>
-            <th scope="col">In stock</th>
-            <th scope="col">Category</th>
-            <th scope="col">Image</th>
-            <th scope="col">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var item in Model){
-        <tr>
-            <td>@item.SerialNumber</td>
-            <td>@item.ProductName</td>
-            <td>@item.Price</td>
-            <td>@item.CurrencyType</td>
-            <td>@item.ProductDescription</td>
-            <td>@item.CreatedOn?.ToString("MMMM dd, yyyy")</td>
-            <td>@item.CreatedBy</td>
-            <td>@item.ProductInStock</td>
-            <td>@item.CategoryName</td>
-            <td><img src="data:image/png;base64,@item.Image" width="100px" /></td>
-            <td>
-                    <a asp-action="Edit" asp-controller="ProductClient" asp-route-id="@item.Id" class="btn btn-green">Edit</a> |
-                    <a asp-action="Delete" asp-controller="ProductClient" asp-route-id="@item.Id" class=" btn btn-danger">Delete</a>
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
-
-<a asp-controller="ProductClient" asp-action="Create" class="btn btn-primary">Create new product</a>
+ <br />
+ <br />
+<div class="btn-center">
+    <a asp-controller="ProductClient" asp-action="Create" class="btn btn-primary ">Create new product</a>
+</div>
+<br />
+<br />
+<div class="table-wrapper">
+    <table class="fl-table">
+        <thead>
+            <tr>
+                <th>Serial number</th>
+                <th>Product name</th>
+                <th>Price</th>
+                <th>Currency type</th>
+                <th>Description</th>
+                <th>Created on</th>
+                <th>Created by</th>
+                <th>In stock</th>
+                <th>Category</th>
+                <th>Image</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.SerialNumber</td>
+                    <td>@item.ProductName</td>
+                    <td>@item.Price</td>
+                    <td>@item.CurrencyType</td>
+                    <td>@item.ProductDescription</td>
+                    <td>@item.CreatedOn?.ToString("MMMM dd, yyyy")</td>
+                    <td>@item.CreatedBy</td>
+                    <td>@item.ProductInStock</td>
+                    <td>@item.CategoryName</td>
+                    <td><img src="data:image/png;base64,@item.Image" width="100px" /></td>
+                    <td>
+                        <a asp-action="Edit" asp-controller="ProductClient" asp-route-id="@item.Id" class="btn btn-green">Edit</a> |
+                        <a asp-action="Delete" asp-controller="ProductClient" asp-route-id="@item.Id" class=" btn btn-danger">Delete</a>
+                    </td>
+                </tr>
+            }
+        <tbody>
+    </table>
+</div>
