--- a/MagazineManagment.ClientApplication/Views/ProfileClient/AsingRoleToUsers.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/AsingRoleToUsers.cshtml
@@ -5,36 +5,39 @@
     var roleId = ViewBag.roleId;
 }
 
+<br />
+<br />
 <form method="post" asp-action="AsingRoleToUsers" asp-controller="ProfileClient" asp-antiforgery="true">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="card">
         <div class="card-header">
             <h2>Users that are not in this role</h2>
+            <h6>Check the checkbox to assing the role to user</h6>
         </div>
         <div class="card-body">
-        @if (Model.Count()  == 0)
-        {
-            <h4 style="color:red">There's no accounts to assign to this role</h4>
-            <a asp-action="Update"  asp-controller="ProfileClient" asp-route-id="@roleId" class="btn btn-green" style="width:auto">Go back</a>
-        }
-        else
-        {
-            @for (int i = 0; i < Model.Count; i++)
+            @if (Model.Count() == 0)
             {
-                <div class="form-check m-1">
-                    <input type="hidden" asp-for="@Model[i].UserId" />
-                    <input type="hidden" asp-for="@Model[i].Username" />
-                    <input asp-for="@Model[i].IsSelected" class="form-check-input" />
-                    <label class="form-check-label" asp-for="@Model[i].IsSelected">
-                        @Model[i].Username
-                    </label>
+                <h4 style="color:red">There's no accounts to assign to this role</h4>
+                <a asp-action="Update" asp-controller="ProfileClient" asp-route-id="@roleId" class="btn btn-green" style="width:auto">Go back</a>
+            }
+            else
+            {
+                @for (int i = 0; i < Model.Count; i++)
+                {
+                    <div class="form-check m-1">
+                        <input type="hidden" asp-for="@Model[i].UserId" />
+                        <input type="hidden" asp-for="@Model[i].Username" />
+                        <input asp-for="@Model[i].IsSelected" class="form-check-input" />
+                        <label class="form-check-label" asp-for="@Model[i].IsSelected">
+                            @Model[i].Username
+                        </label>
+                    </div>
+                }
+                <div class="card-footer">
+                    <input type="submit" value="Add" class="btn btn-green" style="width:auto" />
+                    <a asp-action="Update" asp-controller="ProfileClient" asp-route-id="@roleId" class="btn btn-danger" style="width:auto">Cancel</a>
                 </div>
             }
-                 <div class="card-footer">
-                    <input type="submit" value="Add" class="btn btn-green" style="width:auto" />
-                    <a asp-action="Update"  asp-controller="ProfileClient" asp-route-id="@roleId" class="btn btn-danger" style="width:auto">Cancel</a>
-                </div>
-        }
         </div>
     </div>
 </form>
