--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Delete.cshtml
@@ -59,6 +59,6 @@
         <h2>Remove users from this role</h2>
     </div>
     <div class="card-body">
-        <a asp-action="RemoveRoleFromUsers" asp-controller="ProfileClient" asp-route-id="@Model.RoleId" class="btn btn-danger">Remove</a>
+        <a asp-action="RemoveRoleFromUsers" asp-controller="ProfileClient" asp-route-id="@Model.RoleId" class="btn btn-danger">Go to page</a>
     </div>
 </div>
