--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Index.cshtml
@@ -4,37 +4,42 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>@ViewBag.Message</h2>
-
-<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-<table class="table table-striped table-dark">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Role name</th>
-            <th scope="col">Normalzied name</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
-            <th scope="col">Users in this role</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var item in Model){
-        <tr>
-            <td>@item.RoleName</td>
-            <td>@item.RoleNameNormalized</td>
-            <td>
-               | <a asp-action="Update" asp-controller="ProfileClient" asp-route-id="@item.RoleId" class="btn btn-green"><i class="fa-solid fa-pen-to-square"></i></a> |
-            </td>
-            <td>
-               | <a asp-action="Delete" asp-controller="ProfileClient" asp-route-id="@item.RoleId" class=" btn btn-danger"><i class="fa-solid fa-trash"></i></a> |
-            </td>
-            <td>
-               | <a asp-action="Users" asp-controller="ProfileClient" asp-route-id="@item.RoleId" class="btn btn-primary btn-primary-plus"><i class="fa-solid fa-location-arrow"></i></a> |
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
-
-<a asp-controller="ProfileClient" asp-action="Create" class="btn btn-primary">Create new role</a>
+<br />
+<br />
+<div class="btn-center">
+    <a asp-controller="ProfileClient" asp-action="Create" class="btn btn-primary">Create new role</a>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+</div>
+<br />
+<br />
+<div class="table-wrapper">
+    <table class="fl-table">
+        <thead>
+            <tr>
+                <th scope="col">Role name</th>
+                <th scope="col">Normalized name</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
+                <th scope="col">Users in this role</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.RoleName</td>
+                    <td>@item.RoleNameNormalized</td>
+                    <td>
+                        | <a asp-action="Update" asp-controller="ProfileClient" asp-route-id="@item.RoleId" class="btn btn-green"><i class="fa-solid fa-pen-to-square"></i></a> |
+                    </td>
+                    <td>
+                        | <a asp-action="Delete" asp-controller="ProfileClient" asp-route-id="@item.RoleId" class=" btn btn-danger"><i class="fa-solid fa-trash"></i></a> |
+                    </td>
+                    <td>
+                        | <a asp-action="Users" asp-controller="ProfileClient" asp-route-id="@item.RoleId" class="btn btn-primary btn-primary-plus"><i class="fa-solid fa-location-arrow"></i></a> |
+                    </td>
+                </tr>
+            }
+        <tbody>
+    </table>
+</div>
