--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Update.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Update.cshtml
@@ -13,7 +13,7 @@
         <input asp-for="RoleId" hidden />
     </div>
     <br />
-    <input type="submit" class="btn btn-green" />
+    <input type="submit" class="btn btn-green" value="Update" />
 </form>
 <br />
 <div class="card">
@@ -21,6 +21,6 @@
         <h2>Add users from this role</h2>
     </div>
     <div class="card-body">
-        <a asp-action="AsingRoleToUsers" asp-controller="ProfileClient" asp-route-id="@Model.RoleId" class="btn btn-green">Add</a>
+        <a asp-action="AsingRoleToUsers" asp-controller="ProfileClient" asp-route-id="@Model.RoleId" class="btn btn-green">Go to page</a>
     </div>
 </div>
