--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Users.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Users.cshtml
@@ -4,26 +4,27 @@
     ViewData["Title"] = "Users";
 }
 
-<table class="table table-striped table-dark">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">User id</th>
-            <th scope="col">Username / Email</th>
-            <th scope="col">Currently in role</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var item in Model){
-        <tr>
-            <td>@item.UserId</td>
-            <td>@item.Username</td>
-            <td>
-               <input type="radio" checked=@item.IsSelected readonly>
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
-
-
-
+<br />
+<div class="table-wrapper">
+    <table class="fl-table">
+        <thead>
+            <tr>
+                <th scope="col">User id</th>
+                <th scope="col">Username / Email</th>
+                <th scope="col">Currently in role</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.UserId</td>
+                    <td>@item.Username</td>
+                    <td>
+                        <input type="radio" checked=@item.IsSelected readonly>
+                    </td>
+                </tr>
+            }
+        <tbody>
+    </table>
+</div>
