--- a/MagazineManagment.ClientApplication/Views/Shared/_Layout.cshtml.css
+++ b/MagazineManagment.ClientApplication/Views/Shared/_Layout.cshtml.css
@@ -45,4 +45,11 @@ button.accept-policy {
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+  color:white;
+  background-color:white;
+}
+footer .container{
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
