--- a/MagazineManagment.ClientApplication/Views/ProductClient/GetChangesMadeByEmployees.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/GetChangesMadeByEmployees.cshtml
@@ -10,6 +10,7 @@
             <tr>
                 <th>Product Id</th>
                 <th>Updated by</th>
+                <th>Quantity before change</th>
                 <th>Changes in quantity</th>
                 <th>When was change made</th>
                 <th>Delete</th>
@@ -21,11 +22,12 @@
                 <tr>
                     <td>@item.ProductId</td>
                     <td>@item.UpdatedBy</td>
+                    <td>@item.QuantityBeforeChange</td>
                     <td>@item.ChangesInQunatity</td>
                     <td>@item.UpdatedOn</td>
                     <td>
-                        <a asp-action="DeleteProductChangeByEmployee" asp-controller="ProductClient" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa-solid fa-trash"></i></a>
-                    </td>
+                        <a asp-action="DeleteProductChangeByEmployee" asp-controller="ProductClient" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa-solid fa-trash"></i></a> |
+                        <a asp-action="DetailsOfProductChangedByEmployee" asp-controller="ProductClient" asp-route-id="@item.ProductId" class="btn btn-green"><i class="fa-solid fa-circle-info"></i></a></td>
                 </tr>
             }
         <tbody>
