--- a/MagazineManagment.ClientApplication/Views/ProfileClient/RemoveRoleFromUsers.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/RemoveRoleFromUsers.cshtml
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="card-header">
             <h2>Users that are in this role</h2>
-            <h6>Uncheck the checkboxes is you wish to remove a user from this role</h6>
+            <h6>Uncheck the checkboxes if you wish to remove a user from this role</h6>
         </div>
         <div class="card-body">
             @if (Model.Count() == 0)
