--- a/MagazineManagment.ClientApplication/Views/ProductClient/GetChangesMadeByEmployees.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/GetChangesMadeByEmployees.cshtml
@@ -4,32 +4,43 @@
     ViewData["Title"] = "GetChangesMadeByEmployees";
 }
 
-<div class="table-wrapper">
-    <table class="fl-table">
-        <thead>
-            <tr>
-                <th>Product Id</th>
-                <th>Updated by</th>
-                <th>Quantity before change</th>
-                <th>Changes in quantity</th>
-                <th>When was change made</th>
-                <th>Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+<br />
+<br />
+@if (Model.Count() == 0)
+{
+    <h3 style="color:red">Theres no change to magazine by employees</h3>
+}
+else
+{
+    <div class="table-wrapper">
+        <table class="fl-table">
+            <thead>
                 <tr>
-                    <td>@item.ProductId</td>
-                    <td>@item.UpdatedBy</td>
-                    <td>@item.QuantityBeforeChange</td>
-                    <td>@item.ChangesInQunatity</td>
-                    <td>@item.UpdatedOn</td>
-                    <td>
-                        <a asp-action="DeleteProductChangeByEmployee" asp-controller="ProductClient" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa-solid fa-trash"></i></a> |
-                        <a asp-action="DetailsOfProductChangedByEmployee" asp-controller="ProductClient" asp-route-id="@item.ProductId" class="btn btn-green"><i class="fa-solid fa-circle-info"></i></a></td>
+                    <th>Product Id</th>
+                    <th>Updated by</th>
+                    <th>Quantity before change</th>
+                    <th>Changes in quantity</th>
+                    <th>When was change made</th>
+                    <th>Delete</th>
                 </tr>
-            }
-        <tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.ProductId</td>
+                        <td>@item.UpdatedBy</td>
+                        <td>@item.QuantityBeforeChange</td>
+                        <td>@item.ChangesInQunatity</td>
+                        <td>@item.UpdatedOn</td>
+                        <td>
+                            <a asp-action="DeleteProductChangeByEmployee" asp-controller="ProductClient" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa-solid fa-trash"></i></a> |
+                            <a asp-action="DetailsOfProductChangedByEmployee" asp-controller="ProductClient" asp-route-id="@item.ProductId" class="btn btn-green"><i class="fa-solid fa-circle-info"></i></a>
+                        </td>
+                    </tr>
+                }
+            <tbody>
+        </table>
+    </div>
+}
