--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Delete.cshtml
@@ -6,53 +6,75 @@
 }
 
 <style>
-    .form-group-image{
+    .form-group-image {
         display: flex;
         align-items: center;
-        justify-content:center;
+        justify-content: center;
     }
-    .form-group-image h1{
-        margin:0px 30px;
+
+    .form-group-image h1 {
+        margin: 0px 30px;
     }
-    .btn-danger{
+
+    .btn-danger {
         background-color: #dc3545;
         color: #fff;
     }
-    .btn-danger:hover{
-        color:#dc3545;
-        background-color:#fff;
-        border-color:#dc3545;
+
+    .btn-danger:hover {
+        color: #dc3545;
+        background-color: #fff;
+        border-color: #dc3545;
     }
-    .btn-green{
+
+    .btn-green {
         background-color: green;
         color: #fff;
     }
-    .btn-green:hover{
-        color:green;
-        background-color:#fff;
-        border-color:green;
+
+    .btn-green:hover {
+        color: green;
+        background-color: #fff;
+        border-color: green;
     }
 </style>
 
 
-<h3>Are you sure to delete this record?</h3>
 
-<form asp-action="Delete" asp-controller="ProfileClient" method="post" method="post" asp-antiforgery="true">
-    <input type="submit" value="Yes" class="btn btn-danger" />
-    <a asp-action="Index" asp-controller="ProfileClient" class="btn btn-green">No</a>
-    <br />
-    <div asp-validation-summary="ModelOnly" class="text-green"></div>
+@if (Model.RoleName != "Admin")
+{
+    <form asp-action="Delete" asp-controller="ProfileClient" method="post" method="post" asp-antiforgery="true">
+        <h3>Are you sure to delete this record?</h3>
+        <input type="submit" value="Yes" class="btn btn-danger" />
+        <a asp-action="Index" asp-controller="ProfileClient" class="btn btn-green">No</a>
+        <div asp-validation-summary="ModelOnly" class="text-green"></div>
+        <div class="form-group">
+
+            <label asp-for="RoleName"></label>
+            <input readonly asp-for="RoleName" type="text" placeholder="Product Name" class="form-control" />
+
+            <label asp-for="RoleNameNormalized"></label>
+            <input readonly asp-for="RoleNameNormalized" type="text" placeholder="Seial Number" class="form-control" />
+
+            <input asp-for="RoleId" hidden />
+        </div>
+    </form>
+}
+else if (Model.RoleName == "Admin")
+{
     <div class="form-group">
 
-        <label asp-for="RoleName" ></label>
-        <input readonly asp-for="RoleName" type="text" placeholder="Product Name" class="form-control"/>
-       
-        <label asp-for="RoleNameNormalized" ></label>
-        <input readonly asp-for="RoleNameNormalized" type="text" placeholder="Seial Number" class="form-control"/>
-       
-        <input asp-for="RoleId" hidden />
+        <label asp-for="RoleName"></label>
+        <input readonly asp-for="RoleName" type="text" placeholder="Product Name" class="form-control" />
+
+        <label asp-for="RoleNameNormalized"></label>
+        <input readonly asp-for="RoleNameNormalized" type="text" placeholder="Seial Number" class="form-control" />
+
     </div>
-</form>
+}
+
+<br />
+
 <br />
 <div class="card">
     <div class="card-header">
