--- a/MagazineManagment.ClientApplication/Views/Shared/_Layout.cshtml
+++ b/MagazineManagment.ClientApplication/Views/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;1,500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f134f815a0.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/wavesurfer.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <header>
