Fixed bugs added more try/catch and added auto mapper

--- a/MagazineManagment.ClientApplication/Views/ProfileClient/AsingRoleToUsers.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/AsingRoleToUsers.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MagazineManagment.DTO.ViewModels
-@model List<UserInRoleViewModel>
+@model List<UserNotInRoleViewModel>
 @{
     ViewData["Title"] = "GetAllUsers";
     var roleId = ViewBag.roleId;
