--- a/MagazineManagment.ClientApplication/Views/ProductClient/Edit.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/Edit.cshtml
@@ -84,7 +84,7 @@ else
         <span asp-validation-for="CurrencyType" class="text-danger"></span>
         <br />
         <label asp-for="CreatedBy" ></label>
-        <input asp-for="CreatedBy" type="text" class="form-control"/> 
+        <input readonly asp-for="CreatedBy" type="text" class="form-control"/> 
         <span asp-validation-for="CreatedBy" class="text-danger"></span>
     </div>
     <br />
