--- a/MagazineManagment.ClientApplication/Views/CategoryClient/Create.cshtml
+++ b/MagazineManagment.ClientApplication/Views/CategoryClient/Create.cshtml
@@ -1,17 +1,23 @@
 ﻿@using MagazineManagment.DTO.ViewModels
+
+@using FormHelper
+@addTagHelper *, FormHelper
+
 @model CategoryCreateViewModel
 @{
     ViewData["Title"] = "Create";
 }
 
-<form asp-action="Create" asp-controller="CategoryClient" method="post" asp-antiforgery="true">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+<form asp-formhelper="true" asp-controller="CategoryClient" asp-action="Create" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false">
+
     <div class="form-group">
-        <label asp-for="CategoryName" ></label>
-        <input asp-for="CategoryName" type="text" placeholder="Category Name" class="form-control"/>
-        <span asp-validation-for="CategoryName"  class="text-danger"></span>
+        <label asp-for="CategoryName"></label>
+        <input asp-for="CategoryName" type="text" placeholder="Category Name" class="form-control" />
+        <span asp-validation-for="CategoryName" class="text-danger"></span>
     </div>
     <br />
     <input type="submit" value="Create category" class="btn btn-primary" />
 </form>
-
