--- a/MagazineManagment.ClientApplication/Views/Shared/_Layout.cshtml
+++ b/MagazineManagment.ClientApplication/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
     <script src="https://kit.fontawesome.com/f134f815a0.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/formhelper/formhelper.min.css" />
 </head>
 <body>
     <header>
@@ -52,7 +54,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="/formhelper/formhelper.bundle.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
