--- a/MagazineManagment.ClientApplication/Views/ProductClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/Delete.cshtml
@@ -1,13 +1,17 @@
 ﻿@using MagazineManagment.DTO.ViewModels
 @using MagazineManagment.Shared.Enums
 @model ProductUpdateViewModel
+
+@using FormHelper
+@addTagHelper *, FormHelper
+
 @{
     ViewData["Title"] = "Delete";
 }
 
 <h3>Are you sure to delete this record?</h3>
 
-<form asp-action="Delete" asp-controller="ProductClient" method="post" method="post" asp-antiforgery="true">
+<form asp-formhelper="true" asp-action="Delete" asp-controller="ProductClient" method="post" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false">
     <input type="submit" value="Yes" class="btn btn-danger" />
     <a asp-action="Index" asp-controller="ProductClient" class="btn btn-green">No</a>
     <br />
