--- a/MagazineManagment.ClientApplication/Views/CategoryClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/CategoryClient/Delete.cshtml
@@ -1,11 +1,14 @@
 ﻿@using MagazineManagment.DTO.ViewModels
 @model CategoryViewModel
 
+@using FormHelper
+@addTagHelper *, FormHelper
+
 @{
     ViewData["Title"] = "Delete";
 }
 
-<form asp-action="Delete" asp-controller="CategoryClient" method="post" asp-antiforgery="true">
+<form asp-formhelper="true" asp-action="Delete" asp-controller="CategoryClient" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false">
      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
