--- a/MagazineManagment.ClientApplication/Views/ProductClient/Index.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MagazineManagment.DTO.ViewModels
+@using MagazineManagment.Shared.Enums
 @model IEnumerable<ProductViewModel>
 
 <br />
@@ -11,6 +12,10 @@
     <form asp-action="SearchProduct" asp-controller="ProductClient" method="post">
         <input type="text" placeholder="Enter product name" class="form-input" name="productName" />
         <input type="submit" value="Search" class="submitBtn" />
+        <div class="sort">
+            <a asp-action="" asp-controller="">Sort by price</a>
+            <a asp-action="" asp-controller="">Sort by date created</a>
+        </div>
     </form>
     <br />
     <table class="fl-table">
